tests/err_qty/exp_empty.stderr
error: unexpected end of input, expected integer literal
 --> tests/err_qty/exp_empty.rs:5:16
  |
5 |     let _err = qty![1.0 m^];
  |                ^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::macros::proc::qty` which comes from the expansion of the macro `qty` (in Nightly builds, run with -Z macro-backtrace for more info)
